--- a/web/css/main.css
+++ b/web/css/main.css
@@ -11,3 +11,16 @@
     cursor: pointer;
     background: transparent url(/opAuthMixiPlugin/login.gif) center top no-repeat;
 }
+
+#GoogleAppsLogin .input_submit {
+    border: 0;
+    margin: 0;
+    padding: 0;
+    width: 130px;
+    height: 28px;
+    text-indent: -9999px;
+    cursor: pointer;
+    background: transparent url(/opAuthGoogleAppsPlugin/login.png) center top no-repeat;
+}
+
+
